--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -32,80 +32,10 @@
 
 				<div class="collapse navbar-collapse justify-content-end" id="navbar_supported">
 					<ul class="navbar-nav"> 
-						<li class="dropdown">
+						<li>
 							<a class="nav-link dropdown-toggle active" href="" role="button" data-toggle="dropdown" aria-expanded="false">Home</a>
-							<ul class="dropdown-menu services_d">
-								<li><a href="index.html">Home Page 1</a></li>
-								<li><a href="index-2.html">Home Page 2</a></li>
-								<li><a href="index-3.html">Home Page 3</a></li>
-								<li><a href="index-4.html">Home Page 4</a></li>
-								<li><a href="index-5.html">Home Page 5</a></li>
-							</ul>
-						</li> 
-						<li class="dropdown">
-							<a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">About Us</a>
-							<ul class="dropdown-menu services_d">
-								<li><a href="about.html">About Us</a></li> 
-								<li><a href="about-me.html">About Me</a></li> 
-							</ul>
 						</li>
-						<li class="dropdown">
-							<a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Services</a>
-							<ul class="dropdown-menu services_d">
-								<li><a href="balance-body-mind.html">Balance body mind</a></li>  
-								<li><a href="nutrition-plan.html">Nutrition Plan</a></li>  
-								<li><a href="fitness-performance.html">Fitness &amp; Performance</a></li>  
-								<li><a href="routein-program.html">Routein Programe</a></li>  
-								<li><a href="weightloss-program.html">Weight Loos Programe</a></li>  
-								<li><a href="cardio-exercise.html">Cardio Exercise</a></li>  
-								<li><a href="service.html">Service Single</a></li>  
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Gallery </a>
-							<ul class="dropdown-menu" >
-								<li><a href="gallery.html">Gallery Clasic</a></li>
-								<li><a href="gallery-full-width.html">Gallery full width</a></li>
-								<li><a href="gallery-with-text.html">Gallery with text</a></li> 
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Events</a>
-							<ul class="dropdown-menu services_d">
-								<li><a href="event.html">Events</a></li>  
-								<li><a href="event-details.html">Single Event</a></li>   
-							</ul>
-						</li> 
-						<li class="dropdown">
-							<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">Pages</a>
-							<ul class="dropdown-menu">
-								<li><a href="404.html">404 page</a></li>
-								<li><a href="comming-soon.html">Comming Soon</a></li> 
-								<li><a href="faq.html">Faq</a></li> 
-								<li><a href="coaches.html">Team</a></li>  
-								<li><a href="testimonials.html">Testimonials</a></li>  
-							</ul>
-						</li>  
-						<li class="dropdown">
-							<a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Blog</a>
-							<ul class="dropdown-menu services_d">
-								<li><a href="blog-right-sidebar.html">Blog with sidebar</a></li>  
-								<li><a href="blog.html">Blog without sidebar</a></li>  
-								<li><a href="blog-two-column.html">Blog 2 column</a></li>  
-								<li><a href="blog-three-column.html">Blog 3 column</a></li>  
-								<li><a href="blog-details.html">Blog Details</a></li>   
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Shops</a>
-							<ul class="dropdown-menu services_d"> 
-								<li><a href="shop.html">Shop</a></li>  
-								<li><a href="cart.html">Cart</a></li>  
-								<li><a href="checkout.html">Checkout</a></li>  
-								<li><a href="product-details.html">Product detail</a></li>   
-							</ul>
-						</li> 
-						<li><a class="nav-link end_menu" href="contact.html">Contact</a></li> 
+						<li><a class="nav-link end_menu" href="post/">Blog</a></li> 
 						<li class="search_dropdown">
 							<a class="popup-with-zoom-anim" href="#test-search"><i class="icon icon-Search"></i></a> 
 						</li>
