--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -1,15 +1,34 @@
 {{ define "main" }}
 
-  <div class="mw6 center ph3 pv4">
-    <h1 class="f2 lh-title b mb3">{{.Title}}</h1>
-    <div class="flex justify-between grey-3">
-      <p>{{ .Date.Format "Mon, Jan 2, 2006" }}</p>
-      <p>Read in {{ .ReadingTime }} minutes</p>
-    </div>
-    <div class="cms mw6">
-      <p>{{ .Description }}</p>
-      {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" />{{ end }}
-      {{ .Content }}
-    </div>
-  </div>
+        <!--================Banner Area =================-->  
+        <div class="banner_area">
+          <h2>Blog</h2>
+          <a href="#">Home  > Blog  <span>> Blog Dteails</span></a>
+      </div>
+      <!--================End Banner Area =================-->  
+      
+      <!--================Blog tow column Area =================--> 
+      <section class="blog_area blog_details">
+          <div class="container">
+              <div class="row blog_inner">
+                 <!-- Blog Left Sidebar -->
+                 <div class="col-lg-9 blog_lift_sidebar"> 
+                      <!-- Blog items -->
+                      <div class="blog_items">
+                          {{ if .Params.image }}<a href="blog-details.html" class="blog_img"><img src="{{ .Params.image }}" alt="{{ .Title }}" /></a>{{ end }}
+                          <div class="breadcrumb_date">
+                              <h6>{{ .Date.Format "Mon, Jan 2, 2006" }}</h6> 
+                              <ol class="breadcrumb"> 
+                                  <li class="breadcrumb-item">By : <a href="">Admin</a></li>
+                                  <li class="breadcrumb-item"><a href="#">fitness, wellness</a></li>
+                              </ol>  
+                          </div>
+                          <a href="blog-details.html" class="blog_tittle">{{ .Title }}</a>
+                          {{ .Content }}
+                      </div>
+                 </div> 
+              </div>
+          </div>
+      </section>
+      <!--================End Blog tow column Area =================--> 
 {{ end }}
