Refactorizando home y deshardcodeando por qué

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,6 +1,18 @@
 {{ define "main" }}
 
-{{ partial "template-home" . }}
+{{ partial "home/slider" . }}
+
+{{ partial "home/porque" . }}
+
+{{ partial "home/servicios" . }}
+
+{{ partial "home/cintilla" . }}
+
+{{ partial "home/sobretere" . }}
+
+{{ partial "home/testimonios" . }}
+
+{{ partial "home/contacto" . }}
 
 {{ partial "blog" . }}
 
