--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,15 +1,8 @@
 <footer class="footer_area">
 	<div class="container">
-		<div class="row m-0 footer_subscriber">
-			<div class="col-lg-4 find_out_text p-0"><h2>Find out latest news &amp; offers</h2></div>  
-			<div class="form-group col-lg-8 p-0">
-				<input type="email" class="form-control" name="email" placeholder="Email Address*">
-				<button class="find_btn btn" type="submit">Submit Now</button> 
-			</div>  
-		</div>
 		<div class="row footer_row">
 			<div class="col-lg-3 col-md-6 fooer_logo"> 
-				<a href="index.html"><img src="images/logo.png" alt=""></a>
+				<a href="index.html"><img src="images/trlogo.png" alt=""></a>
 				<p>Lorem ipsum dolor sit amet, consec-tet ur adipiscing elit, sed do iusmod tempor incididunt ut labore et.</p>
 				<ul class="social_icon">
 					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
