--- a/site/static/scss/_about.scss
+++ b/site/static/scss/_about.scss
@@ -202,7 +202,7 @@ p.bold{
 }
 
 .best_fitness_area_two{
-    background: #9ac339;
+    background: #06ffcf;
     padding-bottom: 60px;
     overflow: visible;
     .best_fitness_row{
@@ -270,7 +270,7 @@ p.bold{
             text-align: center;
             .counter{
                 font: 900 60px $lato;
-                color: #9ac339;
+                color: #06ffcf;
                 position: relative;
                 display: inline-block;
                 margin-bottom: 15px;
@@ -279,7 +279,7 @@ p.bold{
                     width: 100%;
                     content: "";
                     height: 3px;
-                    background:#9ac339; 
+                    background:#06ffcf; 
                     position: absolute;
                     bottom: 0;
                 }
