--- a/site/static/scss/_banner.scss
+++ b/site/static/scss/_banner.scss
@@ -195,7 +195,7 @@
         }
         h3{
             font: 700 50px/60px $pop;
-            color: #9ac339;
+            color: #06ffcf;
             padding: 10px 0px 18px;
         }
         h5{
@@ -211,7 +211,7 @@
             font: 600 18px/52px "Poppins", sans-serif;
             color: #fff;
             &:hover{
-                color: #9ac339;
+                color: #06ffcf;
             }
         }
     }
