--- a/site/static/scss/_button.scss
+++ b/site/static/scss/_button.scss
@@ -41,7 +41,7 @@
     border-radius: 40px;
     &:hover{
         background: #fff;
-        color: #9ac339;
+        color: #06ffcf;
     }
 }
 /* Main Button css
