--- a/site/static/scss/_fitness-course.scss
+++ b/site/static/scss/_fitness-course.scss
@@ -178,13 +178,13 @@
         font-size: 25px;
         line-height: 30px;
         font-weight: 700;
-        color: #9ac339;
+        color: #06ffcf;
         font-family: $lato;
         margin: 10px 0px 18px;
     }
     .find_btn{
-        border-color: #9ac339;
-        color: #9ac339;
+        border-color: #06ffcf;
+        color: #06ffcf;
         &:hover{
             color: #fff;
         }
@@ -199,7 +199,7 @@
         margin-bottom: 20px;
         span{
             font-size: 40px;
-            color: #9ac339;
+            color: #06ffcf;
         }
     }
     p{
