--- a/site/static/scss/_product.scss
+++ b/site/static/scss/_product.scss
@@ -154,10 +154,10 @@
             }
             .find_btn{
                 background: transparent;
-                border: 2px solid #9ac339;
-                color: #9ac339;
+                border: 2px solid #06ffcf;
+                color: #06ffcf;
                 &:hover{
-                    background: #9ac339;
+                    background: #06ffcf;
                     color: #fff;
                 }
             }
@@ -308,7 +308,7 @@
                 }
             }
             .get_btn {
-                background: #9ac339;
+                background: #06ffcf;
                 border: 0;
                 color: #fff;
                 line-height: 40px;
@@ -344,7 +344,7 @@
                     color: $pfont;
                 }
                 .get_btn{
-                    background: #9ac339;
+                    background: #06ffcf;
                     border: 0;
                     color: #fff;
                     line-height: 40px;
