--- a/site/static/scss/_variables.scss
+++ b/site/static/scss/_variables.scss
@@ -5,7 +5,7 @@ $kau: 'Kaushan Script', cursive;
 $mon: 'Montserrat', sans-serif;
 
 /*Color Variables*/ 
-$bc: #9ac339;
+$bc: #06ffcf;
 $heding: #242424; 
 $pfont: #797979; 
 
