--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -3,8 +3,8 @@
 		<div class="container"> 
 			<div class="header_top_inner d-sm-flex justify-content-sm-between">
 				<div class="left_info">
-					<a href="#"><i class="fa fa-phone"></i>+ (1800) 456 7890</a>
-					<a href="#"><i class="fa fa-envelope-o"></i>info@hilltownresort.com</a>
+					<a href="#"><i class="fa fa-phone"></i>676 53 79 96</a>
+					<a href="#"><i class="fa fa-envelope-o"></i>tere@teresarojo.com</a>
 				</div> 
 				<ul class="header_social">
 					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -19,7 +19,7 @@
 		<nav class="navbar navbar-expand-lg">
 		   <div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/logo.png" alt="">
+					<img src="images/trlogo.png" alt="">
 					<img src="images/top-sticky-bar-logo.png" alt="">
 				</a>
 				<!-- Small Divice Menu-->
@@ -35,10 +35,7 @@
 						<li>
 							<a class="nav-link dropdown-toggle active" href="" role="button" data-toggle="dropdown" aria-expanded="false">Home</a>
 						</li>
-						<li><a class="nav-link end_menu" href="post/">Blog</a></li> 
-						<li class="search_dropdown">
-							<a class="popup-with-zoom-anim" href="#test-search"><i class="icon icon-Search"></i></a> 
-						</li>
+						<li><a class="nav-link end_menu" href="post/">Blog</a></li>
 					</ul> 
 				</div>
 		   </div>
