--- a/site/static/scss/_coaches.scss
+++ b/site/static/scss/_coaches.scss
@@ -66,7 +66,7 @@
                 color: #fff;
                 display: block;  
                 position: relative;
-                background: #9ac339;
+                background: #06ffcf;
                 letter-spacing: 1.2px;
                 font: 600 20px/24px $pop;
                 border-top: 1px solid #fff; 
@@ -246,8 +246,8 @@
                     font-size: 22px;
                     color: #c2c2c2;
                     &:hover{
-                        background: #9ac339;
-                        border-color: #9ac339;
+                        background: #06ffcf;
+                        border-color: #06ffcf;
                         color: #fff;
                     }
                 }
@@ -275,7 +275,7 @@
             }
             &:hover{
                 a{
-                    background: #9ac339;
+                    background: #06ffcf;
                     color: #fff;
                 }
             }
