--- a/site/static/scss/_gallery.scss
+++ b/site/static/scss/_gallery.scss
@@ -147,7 +147,7 @@
                 content: "";
                 width: 40px;
                 height: 2px;
-                background: #9ac339;
+                background: #06ffcf;
                 display: block;
                 position: absolute;
                 bottom: 0;
