--- a/site/layouts/partials/home/servicios.html
+++ b/site/layouts/partials/home/servicios.html
@@ -2,70 +2,22 @@
 <section class="services_area">
     <div class="container">
        <div class="left_tittle">
-           <h2>Our Services</h2>
-           <p>Osed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci sed quia non numquam qui ratione voluptatem sequi nesciunt. </p>
+        <h2>{{ .Params.servicios }}</h2>
+        <p>{{ .Params.serviciosExplicacion }}</p>
        </div>
         <div class="row service_row">
+            {{ range .Params.serviciosMotivos }}
             <div class="col-lg-4 col-md-6 body_mind">
                 <div class="media"> 
                     <i class="flaticon-running"></i>
                     <div class="media-body">
-                        <h4>Balance Body mind</h4>
-                        <p>Lorem Ipsum is  simply my text of the printing and Ipsum is simply text of the Ipsum is simply.</p>
+                        <h4>{ .titulo }</h4>
+                        <p>{ .explicacion }</p>
                         <a href="#">Read more</a>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 body_mind">
-                <div class="media"> 
-                    <i class="flaticon-nutrition"></i>
-                    <div class="media-body">
-                        <h4>Nutrition Plan</h4>
-                        <p>Lorem Ipsum is  simply my text of the printing and Ipsum is simply text of the Ipsum is simply.</p>
-                        <a href="#">Read more</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 body_mind">
-                <div class="media"> 
-                    <i class="flaticon-gym"></i>
-                    <div class="media-body">
-                        <h4>Fitness &amp; Performance</h4>
-                        <p>Lorem Ipsum is  simply my text of the printing and Ipsum is simply text of the Ipsum is simply.</p>
-                        <a href="#">Read more</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 body_mind">
-                <div class="media"> 
-                    <i class="flaticon-runner"></i>
-                    <div class="media-body">
-                        <h4>Routein Programe</h4>
-                        <p>Lorem Ipsum is  simply my text of the printing and Ipsum is simply text of the Ipsum is simply.</p>
-                        <a href="#">Read more</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 body_mind">
-                <div class="media"> 
-                    <i class="flaticon-waist"></i>
-                    <div class="media-body">
-                        <h4>Weight Loss Program</h4>
-                        <p>Lorem Ipsum is  simply my text of the printing and Ipsum is simply text of the Ipsum is simply.</p>
-                        <a href="#">Read more</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 body_mind">
-                <div class="media"> 
-                    <i class="flaticon-cardiogram"></i>
-                    <div class="media-body">
-                        <h4>Cardio Excercise</h4>
-                        <p>Lorem Ipsum is  simply my text of the printing and Ipsum is simply text of the Ipsum is simply.</p>
-                        <a href="#">Read more</a>
-                    </div>
-                </div>
-            </div>
+            {{ end }}
         </div>
     </div>
 </section>
