--- a/site/layouts/partials/home/sobretere.html
+++ b/site/layouts/partials/home/sobretere.html
@@ -3,10 +3,10 @@
     <div class="container">
         <div class="row aboutus_row">
             <div class="about_content col-lg-6 col-md-12">
-                <h2>About Us</h2>
-                <p class="bold">Our fitness coaches can enable you to meet your wellness objectives. They can turn into your instructor, your helper, your mentor and your companion. </p>
-                <p>Osed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci sed quia non numquam qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
-                <a href="#" class="get_btn">Know more about us</a>
+                <h2>{{ .Params.sobreTereTitulo }}</h2>
+                <p class="bold">{{ .Params.sobreTereSubtitulo }}</p>
+                <p>{{ .Params.sobreTereDescripción }}</p>
+                <a href="#" class="get_btn">{{ .Params.sobreTereBoton }}</a>
                 <img src="images/sign.png" alt="">
             </div>
             <div class="col-lg-6 col-md-12 about_video"> 
