--- a/site/layouts/partials/home/cintilla.html
+++ b/site/layouts/partials/home/cintilla.html
@@ -2,9 +2,9 @@
 <section class="fitness_course_area">
     <div class="container">
         <div class="fitness_course_row">
-            <h2>6 months Fitness Course</h2>
-            <p>Start working on your body today, and with our individual fitness program, already in 90 days you will see a totally different girl in the mirror.</p>
-            <a href="#" class="get_btn">Get appointment</a>
+            <h2>{{ .Params.cintillaTitulo }}</h2>
+            <p>{{ .Params.cintillaDescripcion }}</p>
+            <a href="#" class="get_btn">{{ .Params.cintillaBoton }}</a>
         </div>
     </div>
 </section>
