--- a/site/layouts/partials/home/testimonios.html
+++ b/site/layouts/partials/home/testimonios.html
@@ -2,44 +2,24 @@
 <section class="customers_says">
     <div class="container">
        <div class="center_tittle">
-           <h2>What our customers says</h2>
-           <h6>Thousands of people get benefit</h6>
+           <h2>{{ .Params.testimoniosTitulo }}</h2>
+           <h6>{{ .Params.testimoniosSubtitulo }}</h6>
        </div>
         <div class="customers_says_row">
             <div class="owl-carousel says_carousel">
+                {{ range .Params.testimoniosListado }}
                <!-- Items -->
-                <div class="item">
+               <div class="item">
                     <div class="media"> 
                        <a href="#" class="client_img"><img src="images/client-1.jpg" alt="" class="rounded-circle"></a>
                         <div class="media-body">
-                            <a href="#">Robert Joe</a>
-                            <h4>I lose 10 ponds in one week</h4>
-                            <P>Osed quia consequuntur magni dolores eos qui rati one voluptatem sequi nesciunt. Neque porro quis-quam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci sed quia non numqua.</P>
+                            <a href="#">{{ .nombre }}</a>
+                            <h4>{{ .titular }}</h4>
+                            <p>{{ .descripcion }}</p>
                         </div>
                     </div>
-                </div>  
-               <!-- Items -->
-                <div class="item">
-                    <div class="media"> 
-                       <a href="#" class="client_img"><img src="images/client-1.jpg" alt="" class="rounded-circle"></a>
-                        <div class="media-body">
-                            <a href="#">Robert Joe</a>
-                            <h4>I lose 10 ponds in one week</h4>
-                            <P>Osed quia consequuntur magni dolores eos qui rati one voluptatem sequi nesciunt. Neque porro quis-quam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci sed quia non numqua.</P>
-                        </div>
-                    </div>
-                </div>  
-               <!-- Items -->
-                <div class="item">
-                    <div class="media"> 
-                       <a href="#" class="client_img"><img src="images/client-1.jpg" alt="" class="rounded-circle"></a>
-                        <div class="media-body">
-                            <a href="#">Robert Joe</a>
-                            <h4>I lose 10 ponds in one week</h4>
-                            <P>Osed quia consequuntur magni dolores eos qui rati one voluptatem sequi nesciunt. Neque porro quis-quam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci sed quia non numqua.</P>
-                        </div>
-                    </div>
-                </div>  
+               </div>
+               {{ end }}
             </div>
         </div>
     </div>
