--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row footer_row">
 			<div class="col-lg-3 col-md-6 fooer_logo"> 
-				<a href="index.html"><img src="images/trlogo.png" alt=""></a>
+				<a href="index.html"><img src="images/logotr.svg" height="60" alt=""></a>
 				<p>Lorem ipsum dolor sit amet, consec-tet ur adipiscing elit, sed do iusmod tempor incididunt ut labore et.</p>
 				<ul class="social_icon">
 					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
