--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -19,8 +19,8 @@
 		<nav class="navbar navbar-expand-lg">
 		   <div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/trlogo.png" alt="">
-					<img src="images/top-sticky-bar-logo.png" alt="">
+					<img src="images/logotr.svg" height="60" alt="">
+					<img src="images/logotr.svg" height="30" alt="">
 				</a>
 				<!-- Small Divice Menu-->
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_supported" aria-controls="navbar_supported" aria-expanded="false" aria-label="Toggle navigation"> 
