--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -7,10 +7,7 @@
 					<a href="#"><i class="fa fa-envelope-o"></i>tere@teresarojo.com</a>
 				</div> 
 				<ul class="header_social">
-					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-					<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://www.instagram.com/teresarojo_trainer/" target="_blank"><i class="fa fa-instagram"></i></a></li>
 				</ul> 
 			</div>
 		</div>
