Metiendo estética tere

--- a/site/static/scss/_banner.scss
+++ b/site/static/scss/_banner.scss
@@ -1,7 +1,7 @@
 /* Banner Area
 ================================ */
 .banner_area{
-    background:url("../images/banner-bg.jpg") no-repeat scroll center center;
+    background:url("../images/banner-bg.jpg") no-repeat scroll bottom right;
     background-size: cover;
     display: block;
     text-align: center;
