--- a/site/layouts/partials/home/servicios.html
+++ b/site/layouts/partials/home/servicios.html
@@ -6,14 +6,14 @@
         <p>{{ .Params.serviciosExplicacion }}</p>
        </div>
         <div class="row service_row">
-            {{ range .Params.serviciosListado }}
+            {{ range first 10 (where .Site.RegularPages "Type" "servicio") }}
             <div class="col-lg-4 col-md-6 body_mind">
                 <div class="media"> 
                     <i class="flaticon-running"></i>
                     <div class="media-body">
-                        <h4>{{ .titulo }}</h4>
-                        <p>{{ .explicacion }}</p>
-                        <a href="#">Read more</a>
+                        <h4>{{ .Title }}</h4>
+                        <p>{{ .Params.description }}</p>
+                        <a href="{{ .Permalink }}">Saber más</a>
                     </div>
                 </div>
             </div>
