--- a/site/layouts/servicio/single.html
+++ b/site/layouts/servicio/single.html
@@ -35,70 +35,11 @@
                                    <i class="flaticon-{{ .icono }}"></i>
                                     <div class="media-left">
                                         <h4>{{ .titulo }}</h4>
-                                        <p>Leverage agile frameworks to provide a robust synopsis for high level over-views. Iterative approaches.</p>
+                                        <p>{{ .descripcion }}</p>
                                     </div>
                                 </div>
                             {{ end }}
                            </div>
-                        </div>
-                        <div class="col p-0">
-                            <div class="row choose_qustion">
-                                <div class="col-lg choose_area">
-                                    <h3>Why Choose Us</h3> 
-                                    <div id="questions_aq" class="questions_ans" data-children=".item">
-                                        <div class="item">
-                                            <a data-toggle="collapse" data-parent="#questions_aq" href="#accordion1" class="collapsed">Bring to the table win-win survival strategies.</a>
-                                            <div id="accordion1" class="collapse" role="tabpanel">
-                                                <p>Expound the actual teachings of the great explor-er of the truth, the master-builder of human hap-piness. No one rejects, dislikes, or avoids.</p>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <a data-toggle="collapse" data-parent="#questions_aq" href="#accordion2" class="collapsed">To ensure proactive domination.</a>
-                                            <div id="accordion2" class="collapse" role="tabpanel">
-                                                <p>Expound the actual teachings of the great explor-er of the truth, the master-builder of human hap-piness. No one rejects, dislikes, or avoids.</p>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <a data-toggle="collapse" data-parent="#questions_aq" href="#accordion3" class="collapsed">Capitalize on low hanging fruit to identify.</a>
-                                            <div id="accordion3" class="collapse show" role="tabpanel">
-                                                <p>Expound the actual teachings of the great explor-er of the truth, the master-builder of human hap-piness. No one rejects, dislikes, or avoids.</p>
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <a data-toggle="collapse" data-parent="#questions_aq" href="#accordion4" class="collapsed">Activity to beta test. Override the digital divide.</a>
-                                            <div id="accordion4" class="collapse" role="tabpanel">
-                                                <p>Expound the actual teachings of the great explor-er of the truth, the master-builder of human hap-piness. No one rejects, dislikes, or avoids.</p>
-                                            </div>
-                                        </div>
-                                    </div> 
-                                </div>
-                                <div class="col-lg request">
-                                    <h3>Request Free Consultation</h3>
-                                    <form class="consultation_from">
-                                        <div class="form-group"> 
-                                            <input type="text" class="form-control" placeholder="Your Name"> 
-                                        </div>
-                                        <div class="form-group"> 
-                                            <input type="email" class="form-control" placeholder="Email">
-                                        </div>
-                                        <div class="form-group">  
-                                            <select class="product_select form-control" style="display: none;">
-                                                <option data-display="Select Service">Select Service</option>
-                                                <option value="">Balance Body Mind</option>
-                                                <option value="">Nutrition Plan</option> 
-                                                <option value="">Fitness &amp; Performance</option>
-                                                <option value="">Routein Program</option>
-                                                <option value="">Weight Loss Program</option>
-                                                <option value="">Cardio Exercise</option> 
-                                            </select><div class="nice-select product_select form-control" tabindex="0"><span class="current">Select Service</span><ul class="list"><li data-value="Select Service" data-display="Select Service" class="option selected">Select Service</li><li data-value="" class="option">Balance Body Mind</li><li data-value="" class="option">Nutrition Plan</li><li data-value="" class="option">Fitness &amp; Performance</li><li data-value="" class="option">Routein Program</li><li data-value="" class="option">Weight Loss Program</li><li data-value="" class="option">Cardio Exercise</li></ul></div>
-                                        </div>
-                                        <div class="form-group message"> 
-                                            <textarea class="form-control" rows="3" placeholder="Message"></textarea>
-                                            <button type="submit" class="send_btn">Send</button>
-                                        </div>  
-                                    </form>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
